--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: 16.x
       - run: npm ci
-      - run: npm run format-check
+      - run: npm run format:check
       - run: npm run build
 
   test:
