--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^16.11.39",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
@@ -46,6 +47,7 @@
   "dependencies": {
     "fast-glob": "^3.3.2",
     "iconv-lite": "^0.6.3",
+    "js-yaml": "^4.1.0",
     "jschardet": "^3.0.0",
     "yargs": "^17.7.2"
   }
